--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -2,8 +2,9 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin-top: 40px;
     background-color: rgb(196, 193, 193);
-    height: 300px;
+    height: 280px;
 }
 
 ul {
