--- a/src/app/produit-list/produit-list.component.scss
+++ b/src/app/produit-list/produit-list.component.scss
@@ -5,11 +5,18 @@
 }
 
 .product {
-    max-width: 300px;
-    margin-bottom: 15px;
-    background-color: #c10a27;
+    background-color: #fffefe;
+    
+}
+
+.productBox{
+    display: inline-flex;
+    background-color: #7e7879;
     color: white;
-    font-size: 20px; 
+    margin-top: 50px;
+    font-size: 17px;
+    flex-wrap: wrap;
+    padding: 8px;
 }
 
 .cursor {
