--- a/src/app/produit-fiche/produit-fiche.component.scss
+++ b/src/app/produit-fiche/produit-fiche.component.scss
@@ -3,17 +3,14 @@
     justify-content: space-around;
     flex-direction: row;
     align-items: center;
-    width: 1200px;
+    // width: 1200px;
 }
 
 img{
-    width: 400px;
+    width: 100px;
 }
 
 .button:hover {
     background: #c10a27;
 }
 
-.button {
-    
-}
