--- a/src/app/produit-list/produit-list.component.scss
+++ b/src/app/produit-list/produit-list.component.scss
@@ -4,9 +4,11 @@
     flex-wrap:  wrap;    
 }
 
+
 .product {
-    background-color: #fffefe;
-    
+    // background-color: #000000;
+    margin-top: 30px;
+    margin-left: 80px;
 }
 
 .productBox{
@@ -16,7 +18,7 @@
     margin-top: 50px;
     font-size: 17px;
     flex-wrap: wrap;
-    padding: 8px;
+    // padding: 8px;
 }
 
 .cursor {
