--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,25 +1,35 @@
-// .header {
-//     background-color: #c10a27;
-//     height: 80px;
-// }
+.header {
+  z-index: 100;
+}
 
+.search {
+  position: relative;
+  margin-right: 60px;
+}
 #search {
-  width: 201px;
-  height: 18px;
+  width: 305px;
+  height: 25px;
   margin-top: 22px;
-  margin-right: 10px;
+  border-radius: 18px;
+}
+
+.before::before { 
+  content: "|";
+  color: white;
+  margin-right: 25px;
 }
 
 #logo {
-    border-radius: 7px, solid;
-    background-color: #c10a27;
-    font-weight: bold;
-    font-size: 35px;
-    font-style: italic;
-    width: 50px;
-    height: 42px;
-    margin-right: 533px;
-    margin-top: 4px;
+  position: relative;
+  border-radius: 7px, solid;
+  background-color: #c10a27;
+  font-weight: bold;
+  font-size: 35px;
+  font-style: italic;
+  width: 50px;
+  height: 42px;
+  margin-right: 233px;
+  top: -13px;
 }
 
 .fa, fa-cart-arrow-down, fa-1x {
@@ -31,17 +41,15 @@
 
 .navigation {
   list-style: none;
-  margin: 0; 
-  
+  margin: 0;
+  height: 63px;
   background: #c10a27;
-  
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  
-  -webkit-flex-flow: row wrap;
+  // -webkit-flex-flow: row wrap;
   justify-content: flex-end;
 }
 
@@ -54,6 +62,12 @@
 
 .navigation a:hover {
   background: darken(#c10a27, 2%);
+}
+
+@media (min-width: 1000px){
+  .container {
+      max-width: 1000px;
+  }
 }
 
 @media all and (max-width: 800px) {
