--- a/src/app/produit-list/produit-list.component.html
+++ b/src/app/produit-list/produit-list.component.html
@@ -1,20 +1,31 @@
-<div [ngClass]="'container product'">
-  <div [ngClass]="'row productBox'" *ngFor="let produit of produits ">
-    <div class="col-sm">
-      <div>
-        <h4>
-          <a [routerLink] = "['/produit-list', produit.id]">{{produit.name}}</a>
-        </h4>
-        <img class="img" src="../assets/{{produit.images}}" alt="images des produits">              
-        
-        <h5>Prix:{{produit.prix}}</h5>
-        <p>{{produit.description}}</p>
-        <p>{{produit.category}}</p>
-        <p>{{produit.marque}}</p> 
+<div  class="container">
+  <div class="row">
+    <div [ngClass]="'product w-100'" >
+        <div [ngClass]="'productBox'" *ngFor="let produit of produits ">
+          <div class="col">
+            <div>
+              <h4 class="d-flex justify-content-center">
+                <a [routerLink] = "['/produit-list', produit.id]">{{produit.name}}</a>
+              </h4>
+              <img class="img" src="../assets/{{produit.images}}" alt="images des produits">              
+              <div class="d-flex justify-content-center" >
+                <h5 >Prix:{{produit.prix}}</h5>
+              </div>
+              <div class="d-flex justify-content-center">
+                <p>{{produit.description}}</p>
+              </div>
+              <div class="d-flex justify-content-center">
+                <p>{{produit.category}}</p>
+              </div>
+              <div class="d-flex justify-content-center">
+                <p>{{produit.marque}}</p> 
+              </div>
+            </div>
+            <div class="d-flex justify-content-center">
+              <button class="cursor" type="button" (click)="addProduitInPanier(produit)">Ajouter au panier</button>
+            </div>
+          </div>
+        </div>
       </div>
-      <div>
-        <button type="button" (click)="addProduitInPanier(produit.id)">Ajouter au panier</button>
-      </div>
-    </div>
   </div>
 </div>
