projet e-commerce avancé

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,11 @@
-
 <div class="footer">
-  <ul>
-    <li>Histoire</li>
-    <li>Apropos</li>
-    <li>CGU</li>
-    <li>Contact</li>
-  </ul>
+  <div class="footer-background">
+    <ul>
+      <li>Histoire</li>
+      <li>Apropos</li>
+      <li>CGU</li>
+      <li>Contact</li>
+    </ul>
+  </div>
 </div>
+
