--- a/src/app/panier/panier.component.html
+++ b/src/app/panier/panier.component.html
@@ -1,17 +1,23 @@
 <div [ngClass]="'container product'">
     <div [ngClass]="'row productBox'" *ngFor="let produit of panier; index as i">
-      <div class="col-sm">
+      <div class="col- shadow">
         <div>
           <h4>
             <a [routerLink] = "['/panier', produit.id]">{{produit.name}}</a>
           </h4>
-          <img class="img" src="../assets/{{produit.images}}" alt="images des produits">                        
-          <h5>Prix:{{produit.prix}}</h5>
-          <p>{{produit.description}}</p>
-          <p>{{produit.marque}}</p> 
+          <img class=" cursor img" src="../assets/{{produit.images}}" alt="images des produits">                        
+          <div class="d-flex justify-content-center">
+            <h5>Prix:{{produit.prix}}</h5>
+          </div>
+          <div class="d-flex justify-content-center">
+            <p>{{produit.description}}</p>             
+          </div>
+          <div class="d-flex justify-content-center">
+            <p>{{produit.marque}}</p>              
+          </div>
         </div>
-        <div>
-          <button class="cursor" type="button" (click)="deleteProduitInPanier(i)">supprimer</button>
+        <div class="d-flex justify-content-center">
+          <button class="color cursor rounded" type="button" (click)="deleteProduitInPanier(i)">supprimer</button>
         </div>       
       </div>
     </div>
