--- a/src/app/produit-list/produit-list.component.html
+++ b/src/app/produit-list/produit-list.component.html
@@ -2,12 +2,12 @@
   <div class="row">
     <div [ngClass]="'product w-100'" >
         <div [ngClass]="'productBox'" *ngFor="let produit of produits ">
-          <div class="col">
+          <div class="col- shadow">
             <div>
               <h4 class="d-flex justify-content-center">
                 <a [routerLink] = "['/produit-list', produit.id]">{{produit.name}}</a>
               </h4>
-              <img class="img" src="../assets/{{produit.images}}" alt="images des produits">              
+              <img class=" cursor img" src="../assets/{{produit.images}}" alt="images des produits">              
               <div class="d-flex justify-content-center" >
                 <h5 >Prix:{{produit.prix}}</h5>
               </div>
@@ -22,7 +22,7 @@
               </div>
             </div>
             <div class="d-flex justify-content-center">
-              <button class="cursor" type="button" (click)="addProduitInPanier(produit)">Ajouter au panier</button>
+              <button class="color cursor rounded" type="button" (click)="addProduitInPanier(produit)">Ajouter au panier</button>
             </div>
           </div>
         </div>
