--- a/src/app/produit-list/produit-list.component.scss
+++ b/src/app/produit-list/produit-list.component.scss
@@ -1,7 +1,19 @@
 .contenair {
     display: flex;
     justify-content: space-around;
-    flex-wrap:  wrap;    
+    flex-wrap:  wrap; 
+}
+
+@media (min-width: 1200px){
+    .container {
+    max-width: 1063px; 
+    }  
+}
+
+.shadow:hover {
+   -moz-box-shadow:    inset 0 0 10px #000000;
+   -webkit-box-shadow: inset 0 0 10px #000000;
+   box-shadow:         inset 0 0 10px #000000;
 }
 
 
@@ -23,6 +35,15 @@
 
 .cursor {
     cursor: pointer;
+}
+
+.color { 
+    color: white;
+    background-color: #c10a27;
+}
+.color:hover {
+    color:  #ffffff;
+    background-color: #35e4e6;
 }
 
 a { 
