--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,16 +1,10 @@
 .footer-background {
     // display: flex;
-    justify-content: space-around;
+    justify-content: pace-evenly;
     align-items: center;
     margin-top: 40px;
     background-color: #28272c;
     height: 280px;
-    top: 12px;
-
-}
-
-.footer {
-    top: 12px;
 }
 
 ul {
