--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -7,7 +7,7 @@
   margin-right: 60px;
 }
 #search {
-  width: 305px;
+  width: 280px;
   height: 25px;
   margin-top: 22px;
   border-radius: 18px;
@@ -19,14 +19,14 @@
   margin-right: 25px;
 }
 
-#logo {
+.logo {
   position: relative;
   border-radius: 7px, solid;
   background-color: #c10a27;
   font-weight: bold;
   font-size: 35px;
   font-style: italic;
-  width: 50px;
+  // width: 50px;
   height: 42px;
   margin-right: 233px;
   top: -13px;
