--- a/src/app/panier/panier.component.scss
+++ b/src/app/panier/panier.component.scss
@@ -5,17 +5,16 @@
 }
 
 .product {
-    background-color: #fffefe;
-    margin-top: 30px;
-    margin-left: 80px;
-    
+    // background-color: #fffefe;
+    // margin-top: 30px;
+    margin-left: 167px;
 }
 
 .productBox{
     display: inline-flex;
     background-color: #7e7879;
     color: white;
-    margin-top: 50px;
+    margin-top: 80px;
     font-size: 17px;
     flex-wrap: wrap;
     padding: 8px;
