--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
 <div class="header position-fixed w-100 px-0">
   <div class="# ">
     <ul class=" navigation ">
-       <a routerLink=""><span id="logo" >MyWatch</span></a>  
+       <a routerLink=""><span class="logo d-block" >MyWatch</span></a>  
       <input class="search text-justify  pl-2" type="text" value="Recherche" id="search"> 
       <li>
         <a routerLink="">
