ajout page user-account

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -32,6 +32,13 @@
   top: -13px;
 }
 
+.slogan{
+  position: relative;
+  color: #08eec0;
+  top: -41px;
+  font-size: 12px;
+}
+
 .fa, fa-cart-arrow-down, fa-1x {
   color: white;
 
