--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
 <div class="header position-fixed w-100 px-0">
   <div class="# ">
     <ul class=" navigation ">
-       <a routerLink=""><span class="logo d-block" >MyWatch</span></a>  
+       <a routerLink=""><span class="logo d-block" >After Feast</span><br> <label class="slogan">Un cadeau que vous n'avez pas aimé, Revendez-le..!</label></a>  
       <input class="search text-justify  pl-2" type="text" value="Recherche" id="search"> 
       <li>
         <a routerLink="">
@@ -19,7 +19,7 @@
           <span class="before d-block">Panier{{panier.length}}</span></a>
       </li>
       <li>
-        <a routerLink="">
+        <a routerLink="/user-account">
           <i class="fas fa-user-circle d-block"></i>
           <span class="before d-block">Compte</span>
         </a>
