avancement projet e-commerce

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,19 +8,19 @@
       <input class="search text-justify  pl-2" type="text" value="Recherche" id="search"> 
       <li>
         <a routerLink="">
-          <i class="fa fa-home fa-1x d-block"></i>
+          <i class="fa fa-home fa-1x ml-3 d-block"></i>
           <span>Accueil</span>
         </a>
       </li>
       <!--<li><a href="#">About</a></li>
       <img class="img" src="../assets/{{panier.images}}" alt="images des produits">-->                       
       <li>
-        <a routerLink="/panier"><i class="fa fa-shopping-bag fa-1x d-block"></i>
+        <a routerLink="/panier"><i class="fa fa-shopping-cart fa-1x ml-5 d-block"></i>
           <span class="before d-block">Panier{{panier.length}}</span></a>
       </li>
       <li>
         <a routerLink="/user-account">
-          <i class="fas fa-user-circle d-block"></i>
+          <i class="fas fa-user-circle ml-5 d-block"></i>
           <span class="before d-block">Compte</span>
         </a>
       </li>
