--- a/src/app/user-account/user-account.component.html
+++ b/src/app/user-account/user-account.component.html
@@ -1,15 +1,13 @@
 
 <section>
   <div class="user">
-      <h1>S'inscrire</h1>
+      <h1>Se connecter</h1>
       <form>
         <fieldset>
-          <input type="text" id="username" name="username" placeholder="Utilisateur" onchange="check();">
           <input type="email" id="email" name="email" placeholder="Email " onchange="check();">
           <input type="password" id="password" name="password" placeholder="Mot de passe" onchange="check();">
-          <input type="password" id="confirm" name="password" placeholder="Confirmer Mot de Passe" onchange="check();">
           <div id="warning"></div>
-          <button onclick="return check();">S'inscrire</button>
+          <button onclick="return check();">Connexion</button>
         </fieldset>
         <p>En cliquant sur le bouton S'inscrire, vous acceptez notre <a href="#">Terme &amp; Conditions</a>, & <a href="#">Politique de confidentialité</a>.</p>
       </form>
