--- a/src/app/user-account/user-account.component.scss
+++ b/src/app/user-account/user-account.component.scss
@@ -60,8 +60,8 @@ h1 {
   padding-top: 5px;
 }
 p {
-  color: #dbdbdb;
-  margin: 10px 2px 3px 2px;
+  color: #6f6a6a;
+  margin: 14px 2px 3px 2px;
 }
 a {
   color: #09bf9a;
