--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -7,7 +7,7 @@
   margin-right: 60px;
 }
 #search {
-  width: 280px;
+  // width: 280px;
   height: 25px;
   margin-top: 22px;
   border-radius: 18px;
@@ -57,7 +57,7 @@
   display: -webkit-flex;
   display: flex;
   // -webkit-flex-flow: row wrap;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .navigation a {
