--- a/src/app/panier/panier.component.html
+++ b/src/app/panier/panier.component.html
@@ -17,7 +17,7 @@
           </div>
         </div>
         <div class="d-flex justify-content-center">
-          <button class="color cursor rounded" type="button" (click)="deleteProduitInPanier(i)">supprimer</button>
+          <button class="color cursor " type="button" (click)="deleteProduitInPanier(i)">supprimer</button>
         </div>       
       </div>
     </div>
