--- a/src/app/produit-fiche/produit-fiche.component.html
+++ b/src/app/produit-fiche/produit-fiche.component.html
@@ -1,17 +1,16 @@
 
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-<div class="aside">
-  <div>
-      <img mat-card-image src="assets/montre-homme.jpg" alt="Photo of a Shiba Inu">      
+<div class="container product">
+  <div class="row productBox">
+    <div class="col shadow">
+      <div>
+        <h4>
+          <a href="#">{{produit.name}}</a>
+        </h4>
+        <img class=" cursor img" src="../assets/{{produit.images}}" alt="images des produits">                        
+        <div class="d-flex justify-content-center">
+          <p>{{produit.description}}</p>             
+        </div>
+      </div>      
+    </div>
   </div>
-  <div>
-    <p>L'attribut src est ignoré lorsque l'agent utilisateur 
-      prend en charge srcset et que ce dernier contient des descripteurs avec 'w'.
-       Dans cet exemple, lorsque la condition (min-width: 600px) est vérifiée
-        pour le média utilisé, la largeur de l'image sera 200px, sinon, elle occupera 50vw 
-        (ce qui correspond à 50% de la largeur de la zone d'affichage (viewport)).
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-        maiores rem natus, eligendi doloremque et ipsa voluptates id nostrum fugit sunt.</p>
-  </div>  
 </div>
-<button class="button">Ajouter au Panier</button>
