--- a/src/app/produit-list/produit-list.component.html
+++ b/src/app/produit-list/produit-list.component.html
@@ -12,7 +12,9 @@
                 <h5 >Prix:{{produit.prix}}</h5>
               </div>
               <div class="d-flex justify-content-center">
+                <a (click)="goToFiche(produit.id)" data-toggle="tooltip" title="Produit d'occasion vendu avec la garantie!">
                 <p>{{produit.description}}</p>
+                </a>
               </div>
               <div class="d-flex justify-content-center">
                 <p>{{produit.category}}</p>
@@ -22,10 +24,11 @@
               </div>
             </div>
             <div class="d-flex justify-content-center">
-              <button class="color cursor rounded" type="button" (click)="addProduitInPanier(produit)">Ajouter au panier</button>
+              <button class="color cursor " type="button" (click)="addProduitInPanier(produit)">Ajouter au panier</button>
             </div>
           </div>
         </div>
       </div>
   </div>
 </div>
+<app-formulaire-db></app-formulaire-db>
