--- a/src/app/produit-list/produit-list.component.scss
+++ b/src/app/produit-list/produit-list.component.scss
@@ -4,11 +4,11 @@
     flex-wrap:  wrap; 
 }
 
-@media (min-width: 1200px){
-    .container {
-    max-width: 1063px; 
-    }  
-}
+// @media (min-width: 1200px){
+//     .container {
+//     max-width: 1063px; 
+//     }  
+// }
 
 .shadow:hover {
    -moz-box-shadow:    inset 0 0 10px #000000;
@@ -20,7 +20,7 @@
 .product {
     // background-color: #000000;
     margin-top: 30px;
-    margin-left: 80px;
+    margin-left: 84px;
 }
 
 .productBox{
@@ -28,9 +28,11 @@
     background-color: #7e7879;
     color: white;
     margin-top: 70px;
-    font-size: 17px;
+    font-size: 16px;
     flex-wrap: wrap;
-    // padding: 8px;
+    border-radius: 5px;
+    margin: 108px 1px 0;
+    box-shadow: inset 0 0 10px #b1a6a6;
 }
 
 .cursor {
@@ -40,10 +42,11 @@
 .color { 
     color: white;
     background-color: #c10a27;
+    border-radius: 1.25rem;
 }
 .color:hover {
     color:  #ffffff;
-    background-color: #35e4e6;
+    background-color: #099e7d;
 }
 
 a { 
@@ -54,5 +57,5 @@ a {
 }
 
 .img {
-    width: 300px;
+    width: 250px;
 }
