--- a/src/app/produit-list/produit-list.component.scss
+++ b/src/app/produit-list/produit-list.component.scss
@@ -4,11 +4,7 @@
     flex-wrap:  wrap; 
 }
 
-// @media (min-width: 1200px){
-//     .container {
-//     max-width: 1063px; 
-//     }  
-// }
+.welcome {position: absolute; top: 65px;}
 
 .shadow:hover {
    -moz-box-shadow:    inset 0 0 10px #000000;
