--- a/src/app/user-account/user-account.component.html
+++ b/src/app/user-account/user-account.component.html
@@ -1,13 +1,13 @@
 
 <section>
   <div class="user">
-      <h1>Se connecter</h1>
+      <h1>S'identifier</h1>
       <form>
         <fieldset>
-          <input type="email" id="email" name="email" placeholder="Email " onchange="check();">
-          <input type="password" id="password" name="password" placeholder="Mot de passe" onchange="check();">
+          <input type="email" id="email" name="email" placeholder="Email " (change)="check($event);">
+          <input type="password" id="password" name="password" placeholder="Mot de passe" (change)="check2($event);">
           <div id="warning"></div>
-          <button onclick="return check();">Connexion</button>
+          <button (click)="submit()">Connexion</button>
         </fieldset>
         <p>En cliquant sur le bouton S'inscrire, vous acceptez notre <a href="#">Terme &amp; Conditions</a>, & <a href="#">Politique de confidentialité</a>.</p>
       </form>
