--- a/src/app/panier/panier.component.html
+++ b/src/app/panier/panier.component.html
@@ -1,3 +1,4 @@
+<h2 class="welcome">Panier de : {{user.name}}</h2>
 <div [ngClass]="'container product'">
     <div [ngClass]="'row productBox'" *ngFor="let produit of panier; index as i">
       <div class="col- shadow">
@@ -5,9 +6,9 @@
           <h4>
             <a [routerLink] = "['/panier', produit.id]">{{produit.name}}</a>
           </h4>
-          <img class=" cursor img" src="../assets/{{produit.images}}" alt="images des produits">                        
+          <img class=" cursor img" src="../assets/{{produit. imageURI}}" alt="images des produits">                        
           <div class="d-flex justify-content-center">
-            <h5>Prix:{{produit.prix}}</h5>
+            <h5>Prix:{{produit.price}}</h5>
           </div>
           <div class="d-flex justify-content-center">
             <p>{{produit.description}}</p>             
