--- a/src/app/panier/panier.component.scss
+++ b/src/app/panier/panier.component.scss
@@ -3,7 +3,7 @@
     justify-content: space-around;
     flex-wrap:  wrap;    
 }
-
+.welcome {position: absolute; top: 65px;}
 .product {
     // background-color: #fffefe;
     // margin-top: 30px;
