--- a/src/app/produit-list/produit-list.component.html
+++ b/src/app/produit-list/produit-list.component.html
@@ -1,4 +1,6 @@
+<p class="welcome">bienvenue {{user.name}}</p>
 <div  class="container">
+  
   <div class="row">
     <div [ngClass]="'product w-100'" >
         <div [ngClass]="'productBox'" *ngFor="let produit of produits ">
@@ -7,9 +9,9 @@
               <h4 class="d-flex justify-content-center">
                 <a [routerLink] = "['/produit-list', produit.id]">{{produit.name}}</a>
               </h4>
-              <img class=" cursor img" src="../assets/{{produit.images}}" alt="images des produits">              
+              <img class=" cursor img" src="../assets/{{produit.imageURI}}" alt="images des produits">              
               <div class="d-flex justify-content-center" >
-                <h5 >Prix:{{produit.prix}}</h5>
+                <h5 >Prix:{{produit.price}}</h5>
               </div>
               <div class="d-flex justify-content-center">
                 <a (click)="goToFiche(produit.id)" data-toggle="tooltip" title="Produit d'occasion vendu avec la garantie!">
@@ -31,4 +33,5 @@
       </div>
   </div>
 </div>
-<app-formulaire-db></app-formulaire-db>
+
+
