verif browser chrome & firfox and adding login

--- a/src/app/panier/panier.component.html
+++ b/src/app/panier/panier.component.html
@@ -1,4 +1,4 @@
-<h2 class="welcome">Panier de : {{user.name}}</h2>
+<h2 class="welcome">votre panier {{user.name}}</h2>
 <div [ngClass]="'container product'">
     <div [ngClass]="'row productBox'" *ngFor="let produit of panier; index as i">
       <div class="col- shadow">
