--- a/src/app/panier/panier.component.scss
+++ b/src/app/panier/panier.component.scss
@@ -3,7 +3,15 @@
     justify-content: space-around;
     flex-wrap:  wrap;    
 }
-.welcome {position: absolute; top: 65px;}
+.welcome {
+    position: relative; 
+    top: 66px;
+    font-size: 16px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    left: 84%;  
+    color: #00a8ff;      
+}
+
 .product {
     // background-color: #fffefe;
     // margin-top: 30px;
