--- a/src/app/produit-list/produit-list.component.html
+++ b/src/app/produit-list/produit-list.component.html
@@ -1,4 +1,4 @@
-<p class="welcome">bienvenue {{user.name}}</p>
+<p class="welcome">BIENVENUE {{user.name}}</p>
 <div  class="container">
   
   <div class="row">
