--- a/src/app/produit-list/produit-list.component.scss
+++ b/src/app/produit-list/produit-list.component.scss
@@ -4,7 +4,14 @@
     flex-wrap:  wrap; 
 }
 
-.welcome {position: absolute; top: 65px;}
+.welcome {
+    display: flex;
+    justify-content: center;
+    position: relative; 
+    top: 100px;
+    color: #00a8ff;
+    font-size: 28px;
+}
 
 .shadow:hover {
    -moz-box-shadow:    inset 0 0 10px #000000;
