--- a/src/app/user-account/user-account.component.scss
+++ b/src/app/user-account/user-account.component.scss
@@ -52,7 +52,7 @@ button {
   outline: none;
   cursor: pointer;
   color: #ffffff;
-  background:#c10a27;
+  background:#4167b2;
 }
 h1 {
   color: #585e57;
@@ -68,6 +68,6 @@ a {
   text-decoration: none;
 }
 #warning {
-  color: #e50d38;
+  color: #4167b2;
   font-weight: bold;
 }
