--- a/src/app/panier/panier.component.scss
+++ b/src/app/panier/panier.component.scss
@@ -9,7 +9,7 @@
     font-size: 16px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     left: 84%;  
-    color: #00a8ff;      
+    color: #4167b2;      
 }
 
 .product {
