--- a/src/app/produit-list/produit-list.component.scss
+++ b/src/app/produit-list/produit-list.component.scss
@@ -9,8 +9,9 @@
     justify-content: center;
     position: relative; 
     top: 100px;
-    color: #00a8ff;
-    font-size: 28px;
+    color: #4167b2;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .shadow:hover {
